# libvideo-decode

./: .MODULE_LICENSE_BSD  CMakeLists.txt  COPYING  README.md  atom.mk  config.in
core/include/video-decode/: vdec_core.h  vdec_internal.h
core/src/: vdec_core_priv.h  vdec_dbg.c  vdec_enums.c  vdec_format.c  vdec_h264.c  vdec_h265.c
ffmpeg/include/video-decode/: vdec_ffmpeg.h
ffmpeg/src/: vdec_ffmpeg.c  vdec_ffmpeg_priv.h
include/video-decode/: vdec.h
mediacodec/include/video-decode/: vdec_mediacodec.h
mediacodec/src/: vdec_mediacodec.c  vdec_mediacodec_convert.h  vdec_mediacodec_priv.h
src/: vdec.c  vdec_dbg.c  vdec_ffmpeg.c  vdec_ffmpeg.h  vdec_h264.c  vdec_mediacodec.c  vdec_mediacodec.h  vdec_priv.h  vdec_videocoremmal.c  vdec_videocoremmal.h  vdec_videotoolbox.c  vdec_videotoolbox.h
tools/: vdec.c
turbojpeg/include/video-decode/: vdec_turbojpeg.h
turbojpeg/src/: vdec_turbojpeg.c  vdec_turbojpeg_priv.h
videocoremmal/include/video-decode/: vdec_videocoremmal.h
videocoremmal/src/: vdec_videocoremmal.c  vdec_videocoremmal_priv.h
videotoolbox/include/video-decode/: vdec_videotoolbox.h
videotoolbox/src/: vdec_videotoolbox.c  vdec_videotoolbox_priv.h
